--- a/app/partials/Personal/GuardrailPricing.html
+++ b/app/partials/Personal/GuardrailPricing.html
@@ -202,7 +202,11 @@
 																		</td>
 																	
 																		</tr>
-																	</tr>
+																	<tr>
+													<td ng-show="pricingList == null" colspan="20" style="text-align:center">
+														   No Data             
+													</td>
+												</tr>
 
 																</tbody>
 
