--- a/app/partials/Personal/EmergencyOverlapPricing.html
+++ b/app/partials/Personal/EmergencyOverlapPricing.html
@@ -185,7 +185,11 @@
 																		</td>
 																	
 																		</tr>
-																	</tr>
+																	<tr>
+													<td ng-show="pricingList == null" colspan="20" style="text-align:center">
+														   No Data             
+													</td>
+												</tr>
 
 																</tbody>
 
