--- a/app/partials/Personal/SalesOderTable.html
+++ b/app/partials/Personal/SalesOderTable.html
@@ -62,26 +62,26 @@
 				 <td><b>System</b></td>
 					<td><b>Date</b></td>
 					
-					<td><b>00-04</b></td>
-					<td><b>05</b></td>
-					<td><b>06</b></td>
-					<td><b>07</b></td>
-					<td><b>08</b></td>
-					<td><b>09</b></td>
-					<td><b>10</b></td>
-					<td><b>11</b></td>
-					<td><b>12</b></td>
-					<td><b>13</b></td>
-					<td><b>14</b></td>
-					<td><b>15</b></td>
-					<td><b>16</b></td>
-					<td><b>17</b></td>
-					<td><b>18</b></td>
-					<td><b>19</b></td>
-					<td><b>20</b></td>
-					<td><b>21</b></td>
-					<td><b>22</b></td>
-					<td><b>23</b></td>
+					<td><b>00-04H</b></td>
+					<td><b>05H</b></td>
+					<td><b>06H</b></td>
+					<td><b>07H</b></td>
+					<td><b>08H</b></td>
+					<td><b>09H</b></td>
+					<td><b>10H</b></td>
+					<td><b>11H</b></td>
+					<td><b>12H</b></td>
+					<td><b>13H</b></td>
+					<td><b>14H</b></td>
+					<td><b>15H</b></td>
+					<td><b>16H</b></td>
+					<td><b>17H</b></td>
+					<td><b>18H</b></td>
+					<td><b>19H</b></td>
+					<td><b>20H</b></td>
+					<td><b>21H</b></td>
+					<td><b>22H</b></td>
+					<td><b>23H</b></td>
 					<td><b>Total</b></td>
 				</tr>
 				</thead>
@@ -121,6 +121,16 @@
                             </tbody>
 				
 				</table>
+				<div>
+									<dir-pagination-controls
+							   max-size="10"
+							   direction-links="true"
+							   boundary-links="true"
+								 >
+									</dir-pagination-controls>
+
+								</div>
+				
 		</div>
 		
 		
