--- a/app/partials/Personal/SOStatus.html
+++ b/app/partials/Personal/SOStatus.html
@@ -186,15 +186,15 @@
 
 
 
-						<div style="text-align:-webkit-center">
-
+						
+							<div class="col-md-12 col-sm-12 col-xs-12 table-responsive">
 							<table class="table table-striped" data-filter="#filter" class="table table-striped">
 								<thead>
 									<tr>
 										<th data-toggle="true" ng-show="showSelect" >
 											<select class="form-control input-xs" ng-model="typeSearch"  >
 												<option value="">Source</option>
-												<option>Ebest</option>
+												<option>EBEST</option>
 												<option>SUPERDAIWA</option>
 												<option>EOS</option>
 												<option>NEOS</option>
@@ -311,6 +311,7 @@
 
 								</div>
 
+								</div>
 
 
 
@@ -377,7 +378,7 @@
 
 
 
-							</div>
+							
 							<div class="clearfix"/>
 							<div class="clearfix"/>
 							<div class="clearfix"/>
