--- a/app/partials/Personal/ShipmentIdocs.html
+++ b/app/partials/Personal/ShipmentIdocs.html
@@ -26,7 +26,7 @@
                     </div>
 					
                     <div class="col-lg-15 col-md-4 col-xs-2 col-sm-6">
-                        <div class="tile-counter bg-primary">
+                        <div ng-class="{ true : 'tile-counter bg-primary' , false : 'tile-counter bg-danger' } [ExpectedRecords==insertedRow] ">
                             <div class="content">
                                 <i class='fa fa-database icon-lg'></i>
                                 <h2 count-to="{{insertedRow}}" value="0" duration="1" class="number_counter"></h2>
@@ -88,18 +88,20 @@
 			<div class="content-body padding-bottom-0">
                 <div class="row">
 				
-                    <div class="col-md-9 col-sm-12 col-xs-12">
+                    <div class="col-md-6 col-sm-6 col-xs-12">
                         <input id="filter" type="text" class="form-control" placeholder="Search" ng-model="filterText" />
 						
 						<!-- <input type="text" ng-model="search" class="form-control" placeholder="Search"> -->
 						
 					</div>
 					
+					<div class="col-md-6 col-sm-6 col-xs-12 text-right">
 					<div class="btn-group margin-bottom-10 margin-right-15">
                        <label class="btn btn-primary" ng-click="FilterAll()" >All</label>
                        <label class="btn btn-success" ng-click="FilterOnlySynced()"  >Synced</label>
                        <label class="btn btn-danger" ng-click="FilterOnlyNotSynced()" >Not Synced</label>
                     </div>
+					</div>
                     
 					
                     <div class="clearfix"></div>
@@ -123,9 +125,11 @@
                                     <th data-hide="phone,tablet">
                                         Date
                                     </th>
+									<!--
                                     <th data-hide="phone,tablet" >
                                         ?
                                     </th>
+									-->
                                     <th data-hide="phone">
                                         Status
                                     </th>
@@ -136,7 +140,7 @@
                                     <td>{{ x.Entry2 }}</td>
 									<td>{{ x.Entry3 == "/CCEJ/SD_BL_PROF" ? "Shipment" : x.Entry3 }}</td>
 									<td>{{ x.Entry1 }}</td>
-									<td>{{ x.Entry4 }}</td>
+									<!-- <td>{{ x.Entry4 }}</td> -->
 									<td><span ng-class="{1 : 'label label-danger', 0 : 'label label-success' } [x.Entry5] " >{{ x.Entry5 == 1 ? "Not Synced" : "Synced" }}</span></td>
                                 </tr>
 								
