--- a/app/partials/Personal/PreviousDay_Material.html
+++ b/app/partials/Personal/PreviousDay_Material.html
@@ -54,7 +54,7 @@
                         </div>
                     </div>
 					
-					<div class="col-lg-15 col-md-8 col-xs-12 col-sm-6">
+					<div class="col-lg-15 col-md-4 col-xs-12 col-sm-6">
 					
 					<div style="text-align:-webkit-center">
                                 <div class="chart" ui-jq="easyPieChart" ui-options="{
@@ -74,7 +74,37 @@
                                 <h4 class="text-center margin-top-10 margin-bottom-10">Records Synced</h4>
                             </div>
 					
-                    </div>    
+                    </div>  
+
+					<div class="col-lg-15 col-md-4 col-xs-12 col-sm-6">
+					
+					<table class="table table-striped">
+						<thead>
+							<tr>
+							<th>Status</th>
+							<th>Count</th>
+							</tr>
+						</thead>								
+						
+							<tr>
+							<td>All idocs</td>
+							<td>{{countAll}} </td>
+							</tr>
+							<tr>
+							<td><i class='fa fa-check-circle icon-success'></i> Synced</td>
+							<td>{{countSynced}}</td>
+							</tr>
+							<tr>
+							<td><i class='fa fa-exclamation-circle icon-danger'></i> Not Synced</td>
+							<td>{{countNotSynced}}</td>
+							</tr>
+							<tr>
+							<td><i class='fa fa-exclamation-triangle icon-warning'> </i> Pending</td>
+							<td>{{countPending}}</td>
+							</tr>		
+					</table>
+					
+                    </div> 					
 						
 					
                     <div class="col-lg-6 col-xs-12 col-sm-12 col-md-6">         
@@ -106,18 +136,21 @@
 			<div class="content-body padding-bottom-0">
                 <div class="row">
 				
-                    <div class="col-md-9 col-sm-12 col-xs-12">
+                    <div class="col-md-8 col-sm-12 col-xs-12">
                         <input id="filter" type="text" class="form-control" placeholder="Search" ng-model="filterText"/>
 						
 						<!-- <input type="text" ng-model="search" class="form-control" placeholder="Search"> -->
 						
 					</div>
 					
-					<div class="btn-group margin-bottom-10 margin-right-15">
+					<div class="col-md-4 col-sm-4 col-xs-4">
+					<div class="btn-group margin-bottom-10">
                        <label class="btn btn-primary" ng-click="FilterAll()" >All</label>
                        <label class="btn btn-success" ng-click="FilterOnlySynced()"  >Synced</label>
                        <label class="btn btn-danger" ng-click="FilterOnlyNotSynced()" >Not Synced</label>
+					   <label class="btn btn-warning" ng-click="FilterOnlyBoomiPending()" >Pending</label>
                     </div>
+					</div>
                     
 					
                     <div class="clearfix"></div>
@@ -147,6 +180,12 @@
                                     <th data-hide="phone">
                                         Status
                                     </th>
+									<th data-hide="phone">
+                                        Cause
+                                    </th>
+									<th data-hide="phone">
+                                        Error Details
+                                    </th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -155,7 +194,11 @@
 									<td>{{ x.Entry3 == "/CCEJ/MATMAS" ? "Material" : x.Entry3 }}</td>
 									<td>{{ x.Entry1 }}</td>
 									<td>{{ x.Entry4 }}</td>
-									<td><span ng-class="{1 : 'label label-danger', 0 : 'label label-success' } [x.Entry5] " >{{ x.Entry5 == 1 ? "Not Synced" : "Synced" }}</span></td>
+									<td><span ng-class="{1 : 'label label-danger', 0 : 'label label-success' , 3 : 'label label-warning' } [x.Entry5] " >{{ x.Entry5 == 1 ? "Not Synced" :
+										 x.Entry5 == 0 ? "synced" :
+										 "Pending in Boomi" }}</span></td>
+									<td>{{ x.Entry6 }}</td>
+									<td>{{ x.Entry7 }}</td>
                                 </tr>
 								<tr >
 													<td ng-show="mdRecordsArray.length==0" colspan="20" style="text-align:center">
