settlement error detail

--- a/app/partials/Personal/Settlement.html
+++ b/app/partials/Personal/Settlement.html
@@ -155,6 +155,9 @@
 																	<th >
                                         Correction
 																	</th>
+																	<th >
+                                        Error Details
+																	</th>
 
 
 
@@ -183,6 +186,7 @@
 																			<span ng-class="{ true : 'label label-warning' } [x.Entry10==1] " >
 														{{ (x.Entry10==1) ? "Corrected" : "--" }}
 																			</td>
+																			<td >{{ x.Entry13 }}</td>
 																			<!--
 														<td>{{ x.Entry8 | date }}</td> -->
 
