--- a/app/partials/Personal/PriceValidation.html
+++ b/app/partials/Personal/PriceValidation.html
@@ -79,14 +79,29 @@
 			<div class="content-body padding-bottom-0">
                 <div class="row">
 				
-                    <div class="col-md-6 col-sm-6 col-xs-6">
+					<div class="col-md-4 col-sm-4 col-xs-6">
+                        
+							<div  class="input-group" >
+
+								<input type="text" class="form-control datepicker" max-date="maxDate" datepicker-popup="yyyy/MM/dd" ng-model="dt" is-open="dtpick.opened"  ng-required="true" close-text="Close" ng-click="open($event,'opened')" 
+								ng-change="getdate()" />
+								<span class="input-group-addon" ng-click="open($event,'opened')">
+									<i class="fa fa-calendar" style="color: #999;"/>
+								</span>
+							</div>
+						
+						<!-- <input type="text" ng-model="search" class="form-control" placeholder="Search"> -->
+						
+					</div>
+				
+                    <div class="col-md-4 col-sm-4 col-xs-6">
                         <input id="filter" type="text" class="form-control" placeholder="Search" ng-model="filterText" />
 						
 						<!-- <input type="text" ng-model="search" class="form-control" placeholder="Search"> -->
 						
 					</div>
 					
-					<div class="col-md-6 col-sm-6 col-xs-6 text-right" >
+					<div class="col-md-4 col-sm-4 col-xs-4 text-right" >
 					<div class="btn-group margin-bottom-10 margin-right-15">
                        <label class="btn btn-primary" ng-click="FilterAll()" >All</label>
                        <!--<label class="btn btn-success" ng-click="FilterOnlySynced()"  >Match</label>-->
