--- a/app/partials/Personal/ShipmentDetails.html
+++ b/app/partials/Personal/ShipmentDetails.html
@@ -136,7 +136,7 @@
 							<label class="form-label" for="field-1">Select Date</label>
 							<div style="width:10%" class="input-group" >
 
-								<input type="text" class="form-control datepicker" max-date="maxDate" datepicker-popup="yyyy/MM/dd" ng-model="dt" is-open="dtpick.opened"  ng-required="true" close-text="Close" ng-click="open($event,'opened')" 
+								<input type="text" class="form-control datepicker"  datepicker-popup="yyyy/MM/dd" ng-model="dt" is-open="dtpick.opened"  ng-required="true" close-text="Close" ng-click="open($event,'opened')" 
 								ng-change="getMonth()" />
 								<span class="input-group-addon" ng-click="open($event,'opened')">
 									<i class="fa fa-calendar" style="color: #999;"/>
