--- a/app/partials/Personal/EmergencyOverlapPricing.html
+++ b/app/partials/Personal/EmergencyOverlapPricing.html
@@ -53,6 +53,13 @@
                 </div> 
 				
             </div>
+			
+			<div class="text-center" ng-show="showLoading">
+					<i class="fa fa-spinner fa-pulse fa-3x"></i>
+					</div>
+				
+					
+					<div class="col-lg-12">
         
 
 
@@ -64,7 +71,7 @@
 			<div class="col-lg-12">
 				<section class="box ">
 					<header class="panel_header">
-						<h2 class="title pull-left">Pricing GuardRail Details</h2>
+						<h2 class="title pull-left">Pricing EMERGENCY OVERLAP Error</h2>
 						<div class="actions panel_actions pull-right">
 							<i class="box_toggle material-icons">expand_more</i>
 
@@ -141,10 +148,12 @@
 																	VRKME
 																	</th>
 																	
-																	
-																	
 																	<th>
 																	SAP Error
+																	</th>
+																	
+																	<th>
+																	TIMESTAMP
 																	</th>
 
 
@@ -171,17 +180,17 @@
 																		<span ng-class="{true : 'label label-danger'} [x.Entry4=='E'] " >
 																		{{ (x.Entry4=='E') ? "Error" :  x.Entry3 }}
 																		</td>
-																		
-																		
-																		
+
 																		<td>
 																		<span ng-class="{true : 'label label-danger'} [x.Entry7=='E'] " ng-click="openDetail('','', x)" style="cursor:pointer">
 																		{{ (x.Entry7=='E') ? "SAP Error" :  "No Error" }}
 																		</span>
 																		<span ng-show="x.Entry7=='E'" class="badge badge-primary" ng-click="openDetail('','', x)" style="cursor:pointer" ><i class="fa fa-info"  ></i></span>
+																		</td>
 																		
+																		<td>
 																		
-																		
+																		{{ x.Entry19 }}
 																		</td>
 																	
 																		</tr>
