--- a/app/partials/Personal/SOStatus.html
+++ b/app/partials/Personal/SOStatus.html
@@ -196,8 +196,8 @@
 												<option value="">Source</option>
 												<option>EBEST</option>
 												<option>SUPERDAIWA</option>
-												<option>EOS</option>
-												<option>NEOS</option>
+												<option>EOS-Normal</option>
+												<option>NEOS_Normal</option>
 												<option>Manual</option>
 											</select>
 										</th>
