--- a/app/partials/Personal/SalesOrderDashboard.html
+++ b/app/partials/Personal/SalesOrderDashboard.html
@@ -110,22 +110,22 @@
                 
         </div>
 		
-		<div class="col-md-12 col-sm-12 col-xs-12 padding-right-30 padding-left-20" ng-click="RedirectToSoStatus('EOS')" >
+		<div class="col-md-12 col-sm-12 col-xs-12 padding-right-30 padding-left-20"  >
 		
 		<div class="col-lg-4 col-md-4 col-xs-12 col-sm-6">
-                        <div class="wid-social persoWidget" style="cursor:pointer" ng-click="RedirectToSoStatus('EOS')">						
-								<i ng-class="{ true : 'material-icons icon-lg icon-danger pull-right' , false : 'material-icons icon-lg icon-success pull-right' } [eosError>0] " style="" >{{  (eosError>0) ? "report_problem" : "check_circle" }}</i>
+                        <div class="wid-social persoWidget" style="cursor:pointer" ng-click="RedirectToSoStatus('EOS-Normal')">						
+								<i ng-class="(eosNormalError>0) ? 'material-icons icon-lg icon-danger pull-right' : ( (eosNormalWarning>0) ? 'material-icons icon-lg icon-warning pull-right' : 'material-icons icon-lg icon-success pull-right') " style="" >{{  (eosNormalError>0) ? "report_problem" : ( (eosNormalWarning>0) ? "report_problem" : "check_circle" ) }}</i>
                             <div class="social-info">
 								<h3 class="bold"> EOS Normal</h3>
 								</br>
 								<h3 class=" count "> Ok : </h3>
-                                <h3 count-to="{{eosOk}}" value="0" duration="1" class="number_counter  count "></h3>
+                                <h3 count-to="{{eosNormalOk}}" value="0" duration="1" class="number_counter  count "></h3>
 								</br>
                                 <h3 class=" count "> In Progress : </h3>
-                                <h3 count-to="{{ eosWarning }}" value="0" duration="1" class="number_counter  count "></h3>
+                                <h3 count-to="{{ eosNormalWarning }}" value="0" duration="1" class="number_counter  count "></h3>
 								</br>
                                 <h3 class=" count "> Error : </h3>
-                                <h3 count-to="{{eosError}}" value="0" duration="1" class="number_counter  count "></h3>
+                                <h3 count-to="{{eosNormalError}}" value="0" duration="1" class="number_counter  count "></h3>
                             </div>
                         </div>
         </div>
