New plant for Shipment

--- a/app/partials/Personal/ShipmentDetails.html
+++ b/app/partials/Personal/ShipmentDetails.html
@@ -172,6 +172,8 @@
 													<option value="">Choose Plant For Filter</option>
 														<option>JW64</option>
 														<option>JW71</option>
+														<option>JW68</option>
+														
 													</select>
 												</div>
 												
