--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -178,6 +178,11 @@
                                 <li ui-sref-active="active">
                                     <a ui-sref="app.tables.salesOrderStatus">SO Status</a>
                                 </li>
+								<!--
+								<li ui-sref-active="active">
+                                    <a ui-sref="app.tables.salesOrderByPlant">SO By Plant</a>
+                                </li>
+								-->
                             </ul>
     </li>
 	
